Updated customer & merchant dashboard UI with 3D design

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https: data: blob:; connect-src 'self' http://127.0.0.1:8000 https:; img-src 'self' https: data: blob:;">
     <title>Login - SuperMall</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/main.css">
@@ -15,7 +16,7 @@
         .form-group label { display: block; margin-bottom: 8px; font-weight: 500; color: #2d3748; }
         .form-group input, .form-group select { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 1rem; font-family: 'Poppins', sans-serif; transition: all 0.3s; box-sizing: border-box; }
         .form-group input:focus, .form-group select:focus { outline: none; border-color: #667eea; box-shadow: 0 0 0 3px rgba(102,126,234,0.1); }
-        .form-group select { appearance: none; background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="%23666" d="M2 0L0 2h4zm0 5L0 3h4z"/></svg>'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px; cursor: pointer; }
+        .form-group select { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 1rem; font-family: 'Poppins', sans-serif; transition: all 0.3s; box-sizing: border-box; -webkit-appearance: none; -moz-appearance: none; appearance: none; background-color: white; background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="%23666" d="M6 9L1.5 4.5h9z"/></svg>'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px; cursor: pointer; }
         .btn-login { width: 100%; padding: 14px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; border-radius: 10px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: all 0.3s; margin-top: 10px; }
         .btn-login:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(102,126,234,0.4); }
         .signup-link { text-align: center; margin-top: 20px; color: #718096; }
@@ -31,20 +32,9 @@
 
         <form id="loginForm" onsubmit="handleLogin(event)">
 
-
             <div class="form-group">
-                <label>Select Role</label>
-                <select id="userRole" required>
-                    <option value="">-- Choose Role --</option>
-                    <option value="customer">Customer</option>
-                    <option value="merchant">Merchant</option>
-                    <option value="admin">Admin</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>Username or Email</label>
-                <input type="text" id="email" placeholder="Enter username or email" required>
+                <label>Email</label>
+                <input type="email" id="email" placeholder="Enter your email" required>
             </div>
 
             <div class="form-group">
@@ -67,9 +57,10 @@
         </div>
     </div>
 
+    <script src="static/js/config.js"></script>
     <script src="static/js/api.js"></script>
     <script src="static/js/auth.js"></script>
-    <script src="static/js/cart.js"></script>
+    <script src="static/js/enhanced-cart.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const redirect = urlParams.get('redirect');
@@ -105,17 +96,13 @@
                 const result = await authService.login(email, password);
                 
                 if (result.success) {
-                    // Handle pending cart item
-                    if (typeof cartManager !== 'undefined') {
-                        cartManager.handlePendingCartItem();
+                    // Handle pending cart/wishlist items
+                    if (typeof enhancedCartManager !== 'undefined') {
+                        await enhancedCartManager.handlePendingCartItem();
                     }
 
-                    if (redirect === 'cart') {
-                        window.location.href = 'cart.html';
-                    } else if (redirect === 'shop_list.html') {
-                        window.location.href = 'shop_list.html';
-                    } else if (redirect) {
-                        window.location.href = redirect;
+                    if (redirect) {
+                        window.location.href = decodeURIComponent(redirect);
                     } else if (result.user.role === 'admin') {
                         window.location.href = 'admin_dashboard.html';
                     } else if (result.user.role === 'merchant') {
