--- a/frontend/shop_reliance_trends.html
+++ b/frontend/shop_reliance_trends.html
@@ -50,8 +50,8 @@
                 <div class="product-price">₹1,899</div>
                 <p style="color: #666; font-size: 0.9rem;">Ethnic wear collection</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Designer Kurti', 1899)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Designer Kurti', 1899)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Designer Kurti', 1899, 'Reliance Trends', 'fashion')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Designer Kurti', 1899, 'Reliance Trends', 'fashion')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -60,8 +60,8 @@
                 <div class="product-price">₹4,299</div>
                 <p style="color: #666; font-size: 0.9rem;">Premium silk collection</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Silk Saree', 4299)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Silk Saree', 4299)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Silk Saree', 4299, 'Reliance Trends', 'fashion')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Silk Saree', 4299, 'Reliance Trends', 'fashion')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -70,8 +70,8 @@
                 <div class="product-price">₹6,799</div>
                 <p style="color: #666; font-size: 0.9rem;">Designer party wear</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Party Lehenga', 6799)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Party Lehenga', 6799)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Party Lehenga', 6799, 'Reliance Trends', 'fashion')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Party Lehenga', 6799, 'Reliance Trends', 'fashion')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -80,8 +80,8 @@
                 <div class="product-price">₹2,199</div>
                 <p style="color: #666; font-size: 0.9rem;">Comfortable ethnic wear</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Palazzo Set', 2199)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Palazzo Set', 2199)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Palazzo Set', 2199, 'Reliance Trends', 'fashion')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Palazzo Set', 2199, 'Reliance Trends', 'fashion')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
         </div>
@@ -90,42 +90,14 @@
     <footer class="footer"><p>© 2025 SuperMall</p></footer>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/api.js"></script>
     <script src="static/js/auth.js"></script>
     <script src="static/js/cart.js"></script>
+    <script src="static/js/enhanced-cart.js"></script>
     <script src="static/js/wishlist.js"></script>
+    <script src="static/js/universal-shop-fix.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const user = authService.getCurrentUser();
-            if (user) {
-                document.getElementById('loginBtn').style.display = 'none';
-                document.getElementById('userMenu').style.display = 'block';
-                document.getElementById('profileBtn').textContent = user.name;
-            }
-        });
-
-        function addToCart(name, price) {
-            const product = {
-                id: Date.now(),
-                name: name,
-                price: price / 83,
-                shopName: 'Reliance Trends',
-                category: 'fashion',
-                image: 'https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=400'
-            };
-            cartManager.addToCart(product);
-        }
-
-        function addToWishlist(name, price) {
-            const product = {
-                id: Date.now() + Math.random(),
-                name: name,
-                price: price / 83,
-                shopName: 'Reliance Trends',
-                category: 'fashion',
-                image: 'https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=400'
-            };
-            wishlistManager.addToWishlist(product);
-        }
+        // Universal functions are now loaded from universal-shop-fix.js
     </script>
 </body>
 </html>
