--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -13,7 +13,8 @@
         .signup-container p { text-align: center; color: #718096; margin-bottom: 30px; }
         .form-group { margin-bottom: 20px; }
         .form-group label { display: block; margin-bottom: 8px; font-weight: 500; color: #2d3748; }
-        .form-group input, .form-group select { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 1rem; font-family: 'Poppins', sans-serif; transition: all 0.3s; }
+        .form-group input { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 1rem; font-family: 'Poppins', sans-serif; transition: all 0.3s; box-sizing: border-box; }
+        .form-group select { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 1rem; font-family: 'Poppins', sans-serif; transition: all 0.3s; box-sizing: border-box; -webkit-appearance: none; -moz-appearance: none; appearance: none; background-color: white; background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="%23666" d="M6 9L1.5 4.5h9z"/></svg>'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px; cursor: pointer; }
         .form-group input:focus, .form-group select:focus { outline: none; border-color: #48bb78; box-shadow: 0 0 0 3px rgba(72,187,120,0.1); }
         .btn-signup { width: 100%; padding: 14px; background: linear-gradient(135deg, #48bb78 0%, #38a169 100%); color: white; border: none; border-radius: 10px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: all 0.3s; margin-top: 10px; }
         .btn-signup:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(72,187,120,0.4); }
@@ -30,8 +31,8 @@
 
         <form id="signupForm" onsubmit="handleSignup(event)">
             <div class="form-group">
-                <label>Full Name</label>
-                <input type="text" id="name" placeholder="Enter your name" required>
+                <label>Username</label>
+                <input type="text" id="username" placeholder="Choose a username" required>
             </div>
 
             <div class="form-group">
@@ -86,18 +87,15 @@
         async function handleSignup(e) {
             e.preventDefault();
             
-            const fullName = document.getElementById('name').value;
+            const username = document.getElementById('username').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             const role = document.getElementById('userRole').value;
 
-            const nameParts = fullName.split(' ');
             const userData = {
-                username: email.split('@')[0],
+                username: username,
                 email: email,
                 password: password,
-                first_name: nameParts[0],
-                last_name: nameParts.slice(1).join(' '),
                 role: role
             };
 
@@ -106,12 +104,19 @@
                 
                 if (result.success) {
                     alert('Account created successfully! Please login to continue.');
-                    window.location.href = `login.html?role=${role}`;
+                    const urlParams = new URLSearchParams(window.location.search);
+                    const redirect = urlParams.get('redirect');
+                    let loginUrl = `login.html?role=${role}`;
+                    if (redirect) {
+                        loginUrl += `&redirect=${encodeURIComponent(redirect)}`;
+                    }
+                    window.location.href = loginUrl;
                 } else {
-                    alert('Registration failed: ' + result.message);
+                    alert('Registration failed: ' + (result.message || 'Please try again'));
                 }
             } catch (error) {
-                alert('Registration error: Please try again');
+                console.error('Registration error:', error);
+                alert('Registration error: Please check your information and try again');
             }
         }
     </script>
