--- a/frontend/shop_croma.html
+++ b/frontend/shop_croma.html
@@ -50,8 +50,8 @@
                 <div class="product-price">₹26,999</div>
                 <p style="color: #666; font-size: 0.9rem;">4K Ultra HD Smart TV</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Smart LED TV 43\"', 26999)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Smart LED TV 43\"', 26999)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Smart LED TV 43\"', 26999, 'Croma', 'electronics')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Smart LED TV 43\"', 26999, 'Croma', 'electronics')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -60,8 +60,8 @@
                 <div class="product-price">₹3,149</div>
                 <p style="color: #666; font-size: 0.9rem;">3 jar mixer grinder</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Mixer & Grinder', 3149)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Mixer & Grinder', 3149)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Mixer & Grinder', 3149, 'Croma', 'electronics')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Mixer & Grinder', 3149, 'Croma', 'electronics')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -70,8 +70,8 @@
                 <div class="product-price">₹15,199</div>
                 <p style="color: #666; font-size: 0.9rem;">Latest Android phones</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Smartphones', 15199)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Smartphones', 15199)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Smartphones', 15199, 'Croma', 'electronics')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Smartphones', 15199, 'Croma', 'electronics')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
             <div class="product-card">
@@ -80,8 +80,8 @@
                 <div class="product-price">₹22,499</div>
                 <p style="color: #666; font-size: 0.9rem;">Double door fridge</p>
                 <div class="product-buttons">
-                    <button class="btn-cart" onclick="addToCart('Refrigerator', 22499)" style="flex:1;">🛒 Cart</button>
-                    <button class="btn-wishlist" onclick="addToWishlist('Refrigerator', 22499)" style="flex:1;">❤️ Wish</button>
+                    <button class="btn-cart" onclick="addToCart('Refrigerator', 22499, 'Croma', 'electronics')" style="flex:1;">🛒 Cart</button>
+                    <button class="btn-wishlist" onclick="addToWishlist('Refrigerator', 22499, 'Croma', 'electronics')" style="flex:1;">❤️ Wish</button>
                 </div>
             </div>
         </div>
@@ -90,42 +90,15 @@
     <footer class="footer"><p>© 2025 SuperMall</p></footer>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/api.js"></script>
     <script src="static/js/auth.js"></script>
     <script src="static/js/cart.js"></script>
+    <script src="static/js/enhanced-cart.js"></script>
     <script src="static/js/wishlist.js"></script>
+    <script src="static/js/universal-shop-fix.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const user = authService.getCurrentUser();
-            if (user) {
-                document.getElementById('loginBtn').style.display = 'none';
-                document.getElementById('userMenu').style.display = 'block';
-                document.getElementById('profileBtn').textContent = user.name;
-            }
-        });
-
-        function addToCart(name, price) {
-            const product = {
-                id: Date.now(),
-                name: name,
-                price: price / 83, // Convert to USD for consistency
-                shopName: 'Croma',
-                category: 'electronics',
-                image: 'https://images.unsplash.com/photo-1593359677879-a4bb92f829d1?w=400'
-            };
-            cartManager.addToCart(product);
-        }
-
-        function addToWishlist(name, price) {
-            const product = {
-                id: Date.now() + Math.random(),
-                name: name,
-                price: price / 83, // Convert to USD for consistency
-                shopName: 'Croma',
-                category: 'electronics',
-                image: 'https://images.unsplash.com/photo-1593359677879-a4bb92f829d1?w=400'
-            };
-            wishlistManager.addToWishlist(product);
-        }
+        // Universal functions are now loaded from universal-shop-fix.js
+        // No need for custom functions here
     </script>
 </body>
 </html>
