--- a/frontend/shop_fashion.html
+++ b/frontend/shop_fashion.html
@@ -113,15 +113,10 @@
         </div>
     </main>
 
-    <script src="static/js/auth.js"></script>
+    <script src="static/js/config.js"></script>
     <script src="static/js/api.js"></script>
-    <script src="static/js/cart.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            updateAuthUI();
-            updateCartBadge();
-            updateWishlistBadge();
-        });
-    </script>
+    <script src="static/js/auth.js"></script>
+    <script src="static/js/enhanced-cart.js"></script>
+    <script src="static/js/universal-shop-fix.js"></script>
 </body>
 </html>
