--- a/frontend/shop_max_fashion.html
+++ b/frontend/shop_max_fashion.html
@@ -90,42 +90,9 @@
     <footer class="footer"><p>© 2025 SuperMall</p></footer>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/api.js"></script>
     <script src="static/js/auth.js"></script>
-    <script src="static/js/cart.js"></script>
-    <script src="static/js/wishlist.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const user = authService.getCurrentUser();
-            if (user) {
-                document.getElementById('loginBtn').style.display = 'none';
-                document.getElementById('userMenu').style.display = 'block';
-                document.getElementById('profileBtn').textContent = user.name;
-            }
-        });
-
-        function addToCart(name, price) {
-            const product = {
-                id: Date.now(),
-                name: name,
-                price: price / 83, // Convert to USD for consistency
-                shopName: 'Max Fashion',
-                category: 'fashion',
-                image: 'https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?w=400'
-            };
-            cartManager.addToCart(product);
-        }
-
-        function addToWishlist(name, price) {
-            const product = {
-                id: Date.now() + Math.random(),
-                name: name,
-                price: price / 83, // Convert to USD for consistency
-                shopName: 'Max Fashion',
-                category: 'fashion',
-                image: 'https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?w=400'
-            };
-            wishlistManager.addToWishlist(product);
-        }
-    </script>
+    <script src="static/js/enhanced-cart.js"></script>
+    <script src="static/js/universal-shop-fix.js"></script>
 </body>
 </html>
